--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "cocos-effect-formatter",
     "displayName": "Cocos Effect Formatter",
-    "description": "",
+    "description": "formatting cocos creator effect file",
     "version": "0.0.1",
     "engines": {
         "vscode": "^1.86.0"
