feature:增加由设置控制的CCProgram区域默认缩进功能

--- a/package.json
+++ b/package.json
@@ -35,7 +35,16 @@
                     "effect"
                 ]
             }
-        ]
+        ],
+        "configuration": {
+            "title": "Cocos Effect Formatter",
+            "properties": {
+                "cocosEffectFormatter.useCocosProgramIndent": {
+                    "type": "boolean",
+                    "default": false
+                }
+            }
+        }
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
